# poetry-editable-failure

./: README.md  build.py  pyproject.toml
editable_failure/: module.py
src/: cpp_module.cpp
